# lumen-vpn

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTINUE_CHECKPOINT.md  CONTRIBUTING.md  LICENSE  NEXTSTEP.md  README.md  README.ru.md  ROADMAP.md  SECURITY.md  build.gradle.kts  settings.gradle.kts
apps/api/: .dockerignore  Dockerfile  README.md  TODO.md  pyproject.toml
apps/api/alembic/versions/: 0002_control_plane_foundation.py  0003_lumen_parity_controls.py  0004_auth_extensions.py  0005_login_lockout.py  0006_ip_control.py  0007_node_plugins.py  0008_infra_billing.py  0009_node_management_parity.py  0010_host_lumen_fields.py  0010_host_remnawave_fields.py  (+1 more)
apps/api/app/: main.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: test_admin_compat_routes.py  test_apply_profile_to_node_routes.py  test_auth_extensions_routes.py  test_auth_user_api_key_routes.py  test_control_plane_foundation_routes.py  test_database_session.py  test_errors.py  test_first_admin_bootstrap.py  test_infra_billing_routes.py  test_ip_control_routes.py  test_license_subscription_routes.py  test_license_subscription_services.py  test_metrics_routes.py  test_node_install_token_lifecycle.py  test_node_outbound_config.py  test_node_plugins_routes.py  test_node_provisioning_routes.py  test_node_provisioning_services.py  test_openapi_seed.py  test_protocol_adapter_catalog.py  test_protocol_live_regression_matrix.py  test_rbac_bootstrap.py  test_runtime_apply_results.py  test_subscription_browser_page.py  test_subscription_renderers.py  test_trojan_subscription_routes.py
(+372 files in other folders)
